--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src = "script.js" defer ></script>
 </head>
 <body>
-    <div id="border">
-        <div id="header">
+    <div id="outer-border">
+        <div id="header-image">
             <img src="/mysHeaderTextLogo.png" id="header-image" >
         </div>
-        <div id="phone-number">
+        <!-- <div id="phone-number">
             <input type="text" placeholder="Phone Number">
             <small></small>
         </div>
@@ -23,7 +23,7 @@
        <div id="download-platform">
             <img src="/appStoreicon.svg">
             <img src="/google-169-189833.svg">
-       </div>
+       </div> -->
 
     </div>
 
