--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <div id="outer-border">
-        <div id="header-image">
-            <img src="/mysHeaderTextLogo.png" id="header-image" >
-        </div>
+            <div id="header-image">
+                <img src="/mysHeaderTextLogo.png" id="header-image" >
+            </div>
+            <div id="">
+                <input type="text" placeholder="Phone Number">
+            </div>
         <!-- <div id="phone-number">
             <input type="text" placeholder="Phone Number">
             <small></small>
