--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <input id="enter-number" onclick="showFormat();" type="text" placeholder="Phone Number">
             </div>
             <small id="small"></small>
-            <div id="btn">
-                <button><a href="/entercode.html">Next</a></button>
+            <div >
+                <button id="next-btn">Next</a></button>
             </div>
         <!-- 
         
