--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <small id="small"></small>
             <div >
-                <button id="next-btn">Next</a></button>
+                <button id="next-btn"><a href="/entercode.html">Next</a></button>
             </div>
         <!-- 
         
