--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 </head>
 <body>
     <div class="mobile-container">
-        <header>
+          <div class="logo">
             <img src="/mysHeaderTextLogo.png" alt="">
-        </header>
-        <input type="tel" placeholder="PhoneNumber">
+            <input type="tel" placeholder="PhoneNumber">
+            
+          </div>
+          <div class="btn-next">
+                <button><a href="/entercode.html">Next</a></button>
+          </div>
+          <div class="download-platform">
+            <img src="/appStoreicon.svg" alt="">
+            <img src="/google-169-189833.svg" alt="">
+      </div>
     </div>
 
 
