--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="mobile-container">
           <div class="logo">
             <img src="/mysHeaderTextLogo.png" alt="">
-            <input type="tel" placeholder="PhoneNumber">
+            <input type="tel" placeholder="Phone Number"><br>
             
           </div>
           <div class="btn-next">
@@ -22,7 +22,6 @@
             <img src="/google-169-189833.svg" alt="">
       </div>
     </div>
-
 
     <link rel="stylesheet" href="style.css">
     <script src = "app.js" defer ></script>
