--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="mobile-container">
           <div class="logo">
             <img src="/mysHeaderTextLogo.png" alt="">
-            <input type="tel" placeholder="Phone Number"><br>
+            <input type="tel" placeholder="Phone Number">
             
           </div>
           <div class="btn-next">
