--- a/entercode.html
+++ b/entercode.html
@@ -9,24 +9,24 @@
     <script src = "script.js" defer ></script>
 </head>
 <body>
-    <div id="border">
-        <div id="header">
-            <img id="entercode-header" src="/mysHeaderTextLogo.png" id="header-image" >
-        </div>
-        <div id="">
-            <label for="pwd">Enter code sent to:<br>+15101234567</label>
-            <input type="password" placeholder="123456" >
-            <p >0:59</p>
-        </div>
-        <div id="btn">
-            <button id ="resend">Resend</button>
-            <button><a href="/onboardingjs.html">Next</a></button>
-        </div>
-       <div id="download-platform">
-            <img src="/appStoreicon.svg">
-            <img src="/google-169-189833.svg">
+    <div class="border">
+        <!-- <h1 id="h1">My<span id="s">S</span><span id="t">t</span>a<span id="t">t</span><span id="i">i</span><span id="s">s</span></h1>
+        <h3>Date at your own pace.</h3> -->
+        <img class="header-img" src="/mysHeaderTextLogo.png" alt="">
+        <p>Enter code sent to:<br>+15101234567</p>
+        <input class="encode-input" type="num" placeholder="123456">
+        <p class="code-time">0:59</p>
+       <div class="btn-next">
+        <button id = "resend"><a href="/.html">Recend</a></button>
+        <button id = "next"><a href="/entercode.html">Next</a></button>
        </div>
-       </div>
+        
+        <div id="download-platform">
+            <img src="/appStoreicon.svg" alt="">
+            <img src="/google-169-189833.svg" alt="">
+           </div>
+
+    </div>
 
 
     
