--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <input type="num" placeholder="Phone Number">
        <div class="btn-next">
-        <button id = "next"><a href="/base-project copy/code.html">Next</a></button>
+        <button id = "next"><a href="/entercode.html">Next</a></button>
        </div>
         
         <div id="download-platform">
