--- a/entercode.html
+++ b/entercode.html
@@ -18,7 +18,7 @@
         <p class="code-time">0:59</p>
        <div class="btn-next">
         <button id = "resend"><a href="/.html">Recend</a></button>
-        <button id = "next"><a href="/entercode.html">Next</a></button>
+        <button id = "entercod-btn-next"><a href="/entercode.html">Next</a></button>
        </div>
         
         <div id="download-platform">
