--- a/entercode.html
+++ b/entercode.html
@@ -14,11 +14,11 @@
         <h3>Date at your own pace.</h3> -->
         <img class="header-img" src="/mysHeaderTextLogo.png" alt="">
         <p>Enter code sent to:<br>+15101234567</p>
-        <input class="encode-input" type="num" placeholder="123456">
+        <input class="entercode-input" type="num" placeholder="123456">
         <p class="code-time">0:59</p>
        <div class="btn-next">
         <button id = "resend"><a href="/.html">Recend</a></button>
-        <button id = "entercod-btn-next"><a href="/entercode.html">Next</a></button>
+        <button id = "entercod-btn-next"><a href="/onboardingjs.html">Next</a></button>
        </div>
         
         <div id="download-platform">
