--- a/entercode.html
+++ b/entercode.html
@@ -17,7 +17,7 @@
         <input class="entercode-input" type="num" placeholder="123456">
         <p class="code-time">0:59</p>
        <div class="btn-next">
-        <button id = "resend"><a href="/.html">Recend</a></button>
+        <button id = "resend"><a href="/index.html">Resend</a></button>
         <button id = "entercod-btn-next"><a href="/onboardingjs.html">Next</a></button>
        </div>
         
