--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 </head>
 <body>
     <div class="border">
-        <!-- <h1 id="h1">My<span id="s">S</span><span id="t">t</span>a<span id="t">t</span><span id="i">i</span><span id="s">s</span></h1>
-        <h3>Date at your own pace.</h3> -->
+        <div class="loading-bar">        
+        </div>
+        <div id="header-text">
+
+        </div>   
+
         <img class="header-img" src="/mysHeaderTextLogo.png" alt="">
-        
-        <input id="enter-number"  type="num" placeholder="Phone Number" onclick="showFormat();">
+        <input id="enter-number"  type="phone" placeholder="Phone Number" onclick="numberValidation();">
         <small id="small"></small>
+
        <div class="btn-next">
-        <button id = "next"><a href="/entercode.html">Next</a></button>
+            <button id = "next" type="submit"><a href="/entercode.html">Next</a></button>
        </div>
         
         <div id="download-platform">
             <img src="/appStoreicon.svg" alt="">
             <img src="/google-169-189833.svg" alt="">
-           </div>
+        </div>
 
     </div>
 
